tests/baselines/reference/binaryIntegerLiteralError.errors.txt
binaryIntegerLiteralError.ts(2,17): error TS1005: ',' expected.
binaryIntegerLiteralError.ts(3,17): error TS1005: ',' expected.


==== binaryIntegerLiteralError.ts (2 errors) ====
    // error
    var bin1 = 0B1102110;
                    ~~~~
!!! error TS1005: ',' expected.
    var bin1 = 0b11023410;
                    ~~~~~
!!! error TS1005: ',' expected.
    
    var obj1 = {
        0b11010: "hi",
        26: "Hello",
        "26": "world",
    };
    